Fri Aug  1 10:59:55 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * tests/Process_Env_Test.cpp:

          #ifdef-out the helper functions in the cases where the body of
          run_main is also #ifdef'ed-out.

Thu Jul 31 15:10:16 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * ace/Process.cpp (inherit_environment):

          When "use_unicode_environment" is in effect, use the unicode env
          block (GetEnvironmentStringsW) when copying the current environment
          in order to inherit it (Win32 only).

        * tests/Process_Env_Test.cpp:

          Extended this test to verify that a large environment block is indeed
          inherited by the spawned process.

Thu Jul 31 13:16:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * bin/tao_orb_tests.lst:

          The QUICK test alternatives should have the same configs as
          their non-quick alternative tests. This has been playing havok
          with !Win32 tests on windows platforms that are using QUICK.

Thu Jul 31 12:35:00 UTC 2008  Simon Massey  <sma at prismtech dot com>

        * tests/run_test.lst:
        * tests/tests.mpc:
        * tests/Refcounted_Event_Handler_Test_DevPoll.cpp:
        * tests/Reference_Counted_Event_Handler_Test_Dev_Poll.cpp:

          Test renamed (has to be less than 38 characters).

Thu Jul 31 10:25:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-g++-common.h:
          Use a different ACE_UNUSED_ARG macro for GCC 4.2 and newer. Moved
          also the definition for gcc to this file instead of config-macros.h.
          Thanks to Jules Colding <colding at 42tools dot com>, Jonathan Brannan
          <jbrannan at atdesk dot com>, and Ken Sedgwick <ken at bonsai dot com>
          for providing the patches. This fixes bugzilla 3270

        * ace/config-macros.h:
          Don't define ACE_UNUSED_ARG for GCC

        * rpmbuild/ace-tao.spec:
          Removed unused arg patch
