@@ -1,3 +1,10 @@
+Mon Aug  4 07:20:12 UTC 2008  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/config-g++-common.h:
+        * ace/config-macros.h:
+          Moved definition of ACE_UNUSED_ARG for GC back to config-macros.h else
+          it isn't available when doing an autoconf build
+
 Fri Aug  1 10:59:55 UTC 2008  Adam Mitz  <mitza@ociweb.com>
 
         * tests/Process_Env_Test.cpp:
